# OOP

./: CMakeLists.txt  main.cpp
1stcol/: 1.cpp  3.cpp
2col/: 1.cpp  11.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp
Kval1kol/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp
Lab1/: 1st.cpp  2nd.cpp  3rd.cpp  studenti.cpp
Lab2/: 1.cpp  2.cpp  3.cpp
av1/: 1.cpp  4.cpp
av2/: 1.cpp
av3/: 1.cpp  3.cpp
freestyle/: f1.cpp  f10.cpp  f2.cpp  f3.cpp  f4.cpp  f5.cpp  f6.cpp  f7.cpp  f8.cpp  f9.cpp
lab3/: 1.cpp  2.cpp
lab4/: 1.cpp  3.cpp
lab5/: 1.cpp  2.cpp
lab6/: 1.cpp  2.cpp
lab7/: 1.cpp  2.cpp  UniEvent.cpp
lab8/: 1.cpp  2.cpp
lab9/: 1.cpp  2.cpp
