cmake_minimum_required(VERSION 3.30)
project(OOP)

set(CMAKE_CXX_STANDARD 20)

add_executable(OOP main.cpp)
#add_executable(freestyle1 "freestyle/f1.cpp")
#add_executable(freestyle2 "freestyle/f2.cpp")
#add_executable(freestyle3 "freestyle/f3.cpp")
#add_executable(freestyle4 "freestyle/f4.cpp")
#add_executable(freestyle5 "freestyle/f5.cpp")
#add_executable(freestyle6 "freestyle/f6.cpp")
#add_executable(freestyle7 "freestyle/f7.cpp")
#add_executable(freestyle8 "freestyle/f8.cpp")
#add_executable(freestyle9 "freestyle/f9.cpp")
#add_executable(freestyle10 "freestyle/f10.cpp")
add_executable(av11 av1/1.cpp)
add_executable(av14 av1/4.cpp)
add_executable(av15 av1/5.cpp)
add_executable(av21 av2/1.cpp)
add_executable(av31 av3/1.cpp)
add_executable(av33 av3/3.cpp)
add_executable(lab11 Lab1/1st.cpp)
add_executable(lab12 Lab1/2nd.cpp)
add_executable(lab13 Lab1/3rd.cpp)
add_executable(labstudenti Lab1/studenti.cpp)
add_executable(1col1 1stcol/1.cpp)
add_executable(1col2 1stcol/2.cpp)
add_executable(1col3 1stcol/3.cpp)
add_executable(1col4 1stcol/4.cpp)
add_executable(1col5 1stcol/5.cpp)
add_executable(kval1 Kval1kol/1.cpp)
add_executable(kval2 Kval1kol/2.cpp)
add_executable(kval3 Kval1kol/3.cpp)
add_executable(kval4 Kval1kol/4.cpp)
add_executable(kval5 Kval1kol/5.cpp)
add_executable(kval6 Kval1kol/6.cpp)

